Perkin-UAT/force-app/main/default/objects/Contact/fields/Contact_State_Count__c.field-meta.xml
<CustomField>
    <fullName>Contact_State_Count__c</fullName>
    <formula>IF(MailingState =  &quot;&quot;, 0,1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact State Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>