Perkin-UAT/force-app/main/default/objects/Contact/fields/Conversion_Time_Expired__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Time_Expired__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Gets checked when SLA time has expired</description>
    <label>Conversion Time Expired</label>
    <type>Checkbox</type>
</CustomField>