Perkin-UAT/force-app/main/default/objects/Contact/fields/Converted_QL__c.field-meta.xml
<CustomField>
    <fullName>Converted_QL__c</fullName>
    <description>Checkbox for Converted Lead</description>
    <label>Converted QL</label>
    <length>10</length>
    <type>Text</type>
</CustomField>