Perkin-UAT/force-app/main/default/objects/Contact/fields/ConvertedRecordId__c.field-meta.xml
<CustomField>
    <fullName>ConvertedRecordId__c</fullName>
    <label>ConvertedRecordId</label>
    <length>30</length>
    <type>Text</type>
</CustomField>