Perkin-UAT/force-app/main/default/objects/Contact/fields/CS_Website_Contact_ID_INF__c.field-meta.xml
<CustomField>
    <fullName>CS_Website_Contact_ID_INF__c</fullName>
    <label>CS Website Contact ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>