Perkin-UAT/force-app/main/default/objects/Contact/fields/CS_Website_User_Type_INF__c.field-meta.xml
<CustomField>
    <fullName>CS_Website_User_Type_INF__c</fullName>
    <label>CS Website User Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Registered User</fullName>
            </value>
            <value>
                <fullName>Harvest User</fullName>
            </value>
            <value>
                <fullName>Store User</fullName>
            </value>
            <value>
                <fullName>Partially Registered User</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>