Perkin-UAT/force-app/main/default/objects/Contact/fields/Current_projects_Experiments__c.field-meta.xml
<CustomField>
    <fullName>Current_projects_Experiments__c</fullName>
    <label>Current projects/Experiments?</label>
    <type>TextArea</type>
</CustomField>