Perkin-UAT/force-app/main/default/objects/Contact/fields/Data_Quality_Description__c.field-meta.xml
<CustomField>
    <fullName>Data_Quality_Description__c</fullName>
    <formula>IMAGE( 
CASE(  Data_Quality_Score__c  , 
1, &quot;/img/samples/stars_100.gif&quot;, 
2, &quot;/img/samples/stars_100.gif&quot;, 
3, &quot;/img/samples/stars_200.gif&quot;, 
4, &quot;/img/samples/stars_200.gif&quot;, 
5, &quot;/img/samples/stars_300.gif&quot;, 
6, &quot;/img/samples/stars_300.gif&quot;, 
7, &quot;/img/samples/stars_400.gif&quot;, 
8, &quot;/img/samples/stars_400.gif&quot;, 
9, &quot;/img/samples/stars_500.gif&quot;, 
10, &quot;/img/samples/stars_500.gif&quot;, 
&quot;/img/samples/stars_000.gif&quot;), 
&quot;rating&quot;)</formula>
    <inlineHelpText>The profile completeness score depends on providing accurate information in the following fields :
Firstname 
Salutation 
Job Function 
Title 
Phone 
Email 
Preferred Language 
Mailing Address 
Market Segment 
Primary Product Interest</inlineHelpText>
    <label>Profile Completeness</label>
    <type>Text</type>
</CustomField>