Perkin-UAT/force-app/main/default/objects/Contact/fields/Data_Quality_Score__c.field-meta.xml
<CustomField>
    <fullName>Data_Quality_Score__c</fullName>
    <formula>IF(ISBLANK(  FirstName ),0,1) + IF(ISBLANK(  Title ),0,1)+IF(ISBLANK( Email),0,1)+IF(ISBLANK(  Preferred_Language__c ),0,1)+IF(ISBLANK(  MailingAddress ),0,1) + 

IF( ISPICKVAL( Salutation ,&quot;&quot;), 0,1) + IF(LEN(Phone) = 0, 0,1)/* + IF( ISPICKVAL(  Job_Function__c  ,&quot;&quot;), 0,1)*/ +IF( ISBLANK(  Areas_of_Work__c  ), 0,1) + IF(ISBLANK(  Product_Interest__c ),0,1)</formula>
    <inlineHelpText>The profile completeness score depends on providing accurate information in the following fields
First name
Salutation
Job function
Title
Phone
Email
Preferred Language
Mailing Address
Market Segment
Primary Product Interest</inlineHelpText>
    <label>Profile Completeness Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>