Perkin-UAT/force-app/main/default/objects/Contact/fields/Department_Person__c.field-meta.xml
<CustomField>
    <fullName>Department_Person__c</fullName>
    <description>This is set to a unique Label now as it read a duplicate value of &quot;Department&quot; prior.</description>
    <label>Department Person</label>
    <length>255</length>
    <type>Text</type>
</CustomField>