Perkin-UAT/force-app/main/default/objects/Contact/fields/Detailed_AS_P_L_Interest__c.field-meta.xml
<CustomField>
    <fullName>Detailed_AS_P_L_Interest__c</fullName>
    <label>Detailed AS P/L Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Atomic Absorption Consumables</fullName>
            </value>
            <value>
                <fullName>Benchtop spectrometer</fullName>
            </value>
            <value>
                <fullName>Compliance</fullName>
            </value>
            <value>
                <fullName>Contracts and warranties</fullName>
            </value>
            <value>
                <fullName>Data Handling (CDS) - Client</fullName>
            </value>
            <value>
                <fullName>Data Handling (CDS) - Workstation</fullName>
            </value>
            <value>
                <fullName>DMA</fullName>
            </value>
            <value>
                <fullName>DSC</fullName>
            </value>
            <value>
                <fullName>Elemental Analysis</fullName>
            </value>
            <value>
                <fullName>Elemental Analysis Consumables</fullName>
            </value>
            <value>
                <fullName>Fast LC / UPLC</fullName>
            </value>
            <value>
                <fullName>Flame AA</fullName>
            </value>
            <value>
                <fullName>Flow injection</fullName>
            </value>
            <value>
                <fullName>Flow Injection / FIFU</fullName>
            </value>
            <value>
                <fullName>Fluorescence Software</fullName>
            </value>
            <value>
                <fullName>Fluorescence Spectroscopy</fullName>
            </value>
            <value>
                <fullName>FT-IR</fullName>
            </value>
            <value>
                <fullName>FT-NIR</fullName>
            </value>
            <value>
                <fullName>FT-NIR spectrometers</fullName>
            </value>
            <value>
                <fullName>Gas Chromatography</fullName>
            </value>
            <value>
                <fullName>GC Analyzers</fullName>
            </value>
            <value>
                <fullName>GC Columns</fullName>
            </value>
            <value>
                <fullName>GC Consumables</fullName>
            </value>
            <value>
                <fullName>GC MS-MS</fullName>
            </value>
            <value>
                <fullName>GC MS - Other</fullName>
            </value>
            <value>
                <fullName>GC Single quad MS Spec</fullName>
            </value>
            <value>
                <fullName>GLP, IQ/OQ, preventative maintenance</fullName>
            </value>
            <value>
                <fullName>Graphite furnace AA</fullName>
            </value>
            <value>
                <fullName>Headspace</fullName>
            </value>
            <value>
                <fullName>Hg/Hydride systems</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>