Perkin-UAT/force-app/main/default/objects/Contact/fields/Detailed_Product_Interest__c.field-meta.xml
<CustomField>
    <fullName>Detailed_Product_Interest__c</fullName>
    <label>Detailed BIO P/L Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AcycloPrime-FP SNP Detection System</fullName>
            </value>
            <value>
                <fullName>Aequorin Licenses</fullName>
            </value>
            <value>
                <fullName>Aequorin Parental Cell Lines</fullName>
            </value>
            <value>
                <fullName>Aequorin Technology</fullName>
            </value>
            <value>
                <fullName>AlphaLISA</fullName>
            </value>
            <value>
                <fullName>Alphascreen</fullName>
            </value>
            <value>
                <fullName>AlphaScreen Surefire</fullName>
            </value>
            <value>
                <fullName>Anesthesia System</fullName>
            </value>
            <value>
                <fullName>ART/GE</fullName>
            </value>
            <value>
                <fullName>ATPLite</fullName>
            </value>
            <value>
                <fullName>Berthold</fullName>
            </value>
            <value>
                <fullName>BLAST</fullName>
            </value>
            <value>
                <fullName>Breathe Test Products</fullName>
            </value>
            <value>
                <fullName>BRET</fullName>
            </value>
            <value>
                <fullName>Brite/Steadylite Plus</fullName>
            </value>
            <value>
                <fullName>cell::explorer</fullName>
            </value>
            <value>
                <fullName>chemagic Beads</fullName>
            </value>
            <value>
                <fullName>chemagic Instruments</fullName>
            </value>
            <value>
                <fullName>chemagic Kits</fullName>
            </value>
            <value>
                <fullName>CLONED RECEPTORS</fullName>
            </value>
            <value>
                <fullName>Columbus</fullName>
            </value>
            <value>
                <fullName>CRI</fullName>
            </value>
            <value>
                <fullName>CT</fullName>
            </value>
            <value>
                <fullName>Custom Acycloterminators</fullName>
            </value>
            <value>
                <fullName>Custom Non-Rad Nucleotides</fullName>
            </value>
            <value>
                <fullName>Custom Services - AlphaLISA</fullName>
            </value>
            <value>
                <fullName>Custom Services - Assay Services</fullName>
            </value>
            <value>
                <fullName>Custom Services - Cell Lines</fullName>
            </value>
            <value>
                <fullName>Custom Services - Flashplates</fullName>
            </value>
            <value>
                <fullName>Custom Services - GENE2SCREEN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>