Perkin-UAT/force-app/main/default/objects/Contact/fields/DNA_RNA_Labeling__c.field-meta.xml
<CustomField>
    <fullName>DNA_RNA_Labeling__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Application Focus Area</description>
    <label>DNA/RNA Labeling</label>
    <type>Checkbox</type>
</CustomField>