Perkin-UAT/force-app/main/default/objects/Contact/fields/ELISA_AlphaLISA__c.field-meta.xml
<CustomField>
    <fullName>ELISA_AlphaLISA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used In Application focus</description>
    <label>ELISA/Immunoassay/RIA</label>
    <type>Checkbox</type>
</CustomField>