Perkin-UAT/force-app/main/default/objects/Contact/fields/Eloqua_Event_Date__c.field-meta.xml
<CustomField>
    <fullName>Eloqua_Event_Date__c</fullName>
    <label>Eloqua Event Date</label>
    <type>Date</type>
</CustomField>