Perkin-UAT/force-app/main/default/objects/Contact/fields/Eloqua_Event_Status__c.field-meta.xml
<CustomField>
    <fullName>Eloqua_Event_Status__c</fullName>
    <label>Eloqua Event Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>