Perkin-UAT/force-app/main/default/objects/Contact/fields/Eloqua_List_Upload_Date__c.field-meta.xml
<CustomField>
    <fullName>Eloqua_List_Upload_Date__c</fullName>
    <label>Eloqua List Upload Date</label>
    <type>DateTime</type>
</CustomField>