Perkin-UAT/force-app/main/default/objects/Contact/fields/Email_Inactive__c.field-meta.xml
<CustomField>
    <fullName>Email_Inactive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Inactive</label>
    <type>Checkbox</type>
</CustomField>