Perkin-UAT/force-app/main/default/objects/Contact/fields/Email_Physician_ID__c.field-meta.xml
<CustomField>
    <fullName>Email_Physician_ID__c</fullName>
    <description>used for NTD / SDx</description>
    <label>Email Physician ID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>