Perkin-UAT/force-app/main/default/objects/Contact/fields/Email_Test__c.field-meta.xml
<CustomField>
    <fullName>Email_Test__c</fullName>
    <label>Email Test</label>
    <type>Email</type>
</CustomField>