Perkin-UAT/force-app/main/default/objects/Contact/fields/Environmental_List__c.field-meta.xml
<CustomField>
    <fullName>Environmental_List__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Environmental List</label>
    <type>Checkbox</type>
</CustomField>