Perkin-UAT/force-app/main/default/objects/Contact/fields/eReports_User__c.field-meta.xml
<CustomField>
    <fullName>eReports_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>eReports User</label>
    <type>Checkbox</type>
</CustomField>