Perkin-UAT/force-app/main/default/objects/Contact/fields/Film__c.field-meta.xml
<CustomField>
    <fullName>Film__c</fullName>
    <label>Film</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PKI</fullName>
            </value>
            <value>
                <fullName>Amersham</fullName>
            </value>
            <value>
                <fullName>VWR</fullName>
            </value>
            <value>
                <fullName>Fisher</fullName>
            </value>
            <value>
                <fullName>Fuji</fullName>
            </value>
            <value>
                <fullName>Kodak</fullName>
            </value>
            <value>
                <fullName>Mandel</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>