Perkin-UAT/force-app/main/default/objects/Contact/fields/Flashplate_Kinase__c.field-meta.xml
<CustomField>
    <fullName>Flashplate_Kinase__c</fullName>
    <label>Flashplate Kinase</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PKI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>