Perkin-UAT/force-app/main/default/objects/Contact/fields/FLR_List__c.field-meta.xml
<CustomField>
    <fullName>FLR_List__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FLR List</label>
    <type>Checkbox</type>
</CustomField>