Perkin-UAT/force-app/main/default/objects/Contact/fields/FMF__c.field-meta.xml
<CustomField>
    <fullName>FMF__c</fullName>
    <label>FMF #</label>
    <length>9</length>
    <type>Text</type>
</CustomField>