Perkin-UAT/force-app/main/default/objects/Contact/fields/FMT_Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>FMT_Customer_Type__c</fullName>
    <inlineHelpText>This field denotes if the person is the main person who bought the instrument or is a user or both and also if two people bought the instrument and are sharing the instrument and or also using it.</inlineHelpText>
    <label>FMT Customer Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>User</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Customer and User</fullName>
            </value>
            <value>
                <fullName>Co Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>