Perkin-UAT/force-app/main/default/objects/Contact/fields/FP_cAMP__c.field-meta.xml
<CustomField>
    <fullName>FP_cAMP__c</fullName>
    <label>FP cAMP</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PKI</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>