Perkin-UAT/force-app/main/default/objects/Contact/fields/Function__c.field-meta.xml
<CustomField>
    <fullName>Function__c</fullName>
    <description>Function from SAP</description>
    <label>Function</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Agriculture</fullName>
            </value>
            <value>
                <fullName>Basic Research</fullName>
            </value>
            <value>
                <fullName>Chemical</fullName>
            </value>
            <value>
                <fullName>Dealer</fullName>
            </value>
            <value>
                <fullName>Diagnostics</fullName>
            </value>
            <value>
                <fullName>EDP manager</fullName>
            </value>
            <value>
                <fullName>Education/Teaching</fullName>
            </value>
            <value>
                <fullName>Electronics/Semicndt</fullName>
            </value>
            <value>
                <fullName>Environmental</fullName>
            </value>
            <value>
                <fullName>Executive Board</fullName>
            </value>
            <value>
                <fullName>Fin.accountg manager</fullName>
            </value>
            <value>
                <fullName>Food</fullName>
            </value>
            <value>
                <fullName>Food/Environmental</fullName>
            </value>
            <value>
                <fullName>Head of Personnel</fullName>
            </value>
            <value>
                <fullName>Head of Purchasing</fullName>
            </value>
            <value>
                <fullName>Head of Sales</fullName>
            </value>
            <value>
                <fullName>Head of the Canteen</fullName>
            </value>
            <value>
                <fullName>Human Disease Resrch</fullName>
            </value>
            <value>
                <fullName>Human Identity</fullName>
            </value>
            <value>
                <fullName>Industrial</fullName>
            </value>
            <value>
                <fullName>Janitor</fullName>
            </value>
            <value>
                <fullName>Marketing Manager</fullName>
            </value>
            <value>
                <fullName>Mining and Geologica</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Personal Assistant</fullName>
            </value>
            <value>
                <fullName>Pharmaceutical</fullName>
            </value>
            <value>
                <fullName>Polymers &amp; Plastics</fullName>
            </value>
            <value>
                <fullName>Therapeutics</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>