Perkin-UAT/force-app/main/default/objects/Contact/fields/fxContactAddress__c.field-meta.xml
<CustomField>
    <fullName>fxContactAddress__c</fullName>
    <businessOwnerGroup>ARQ_000713</businessOwnerGroup>
    <description>This is a concatenation of the Mailing Address Info for a Contact created for Incident #-INC0054070</description>
    <formula>MailingStreet &amp;&quot;, &quot;&amp; MailingCity &amp;&quot;, &quot;&amp; MailingState &amp;&quot; &quot;&amp; MailingPostalCode &amp;&quot; &quot;&amp; MailingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Contacts Mailing Address</inlineHelpText>
    <label>Contact Address</label>
    <type>Text</type>
</CustomField>