Perkin-UAT/force-app/main/default/objects/Contact/fields/GA_Campaign_Analytics__c.field-meta.xml
<CustomField>
    <fullName>GA_Campaign_Analytics__c</fullName>
    <description>Requested by Corp Marketing Ops for Web Analytics Information</description>
    <inlineHelpText>Web Analytics Information</inlineHelpText>
    <label>GA-Campaign</label>
    <type>TextArea</type>
</CustomField>