Perkin-UAT/force-app/main/default/objects/Contact/fields/GA_Content_Analytics__c.field-meta.xml
<CustomField>
    <fullName>GA_Content_Analytics__c</fullName>
    <description>Requested by Corp Marketing Operations for Web Analytics Information</description>
    <inlineHelpText>Web Analytics Information</inlineHelpText>
    <label>GA-Content</label>
    <type>TextArea</type>
</CustomField>