Perkin-UAT/force-app/main/default/objects/Contact/fields/Ga_Low_Limit__c.field-meta.xml
<CustomField>
    <fullName>Ga_Low_Limit__c</fullName>
    <description>used for NTD / SDx</description>
    <label>Ga Low Limit</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>