Perkin-UAT/force-app/main/default/objects/Contact/fields/GA_Source_Analytics__c.field-meta.xml
<CustomField>
    <fullName>GA_Source_Analytics__c</fullName>
    <description>Requested by Corp Marketing Ops for Analytics details</description>
    <label>GA-Source</label>
    <type>TextArea</type>
</CustomField>