Perkin-UAT/force-app/main/default/objects/Contact/fields/GC_List__c.field-meta.xml
<CustomField>
    <fullName>GC_List__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GC List</label>
    <type>Checkbox</type>
</CustomField>