Perkin-UAT/force-app/main/default/objects/Contact/fields/GDS_List__c.field-meta.xml
<CustomField>
    <fullName>GDS_List__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GDS List</label>
    <type>Checkbox</type>
</CustomField>