Perkin-UAT/force-app/main/default/objects/Contact/fields/Genomics_List__c.field-meta.xml
<CustomField>
    <fullName>Genomics_List__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Genomics List</label>
    <type>Checkbox</type>
</CustomField>