Perkin-UAT/force-app/main/default/objects/Contact/fields/Global_Account__c.field-meta.xml
<CustomField>
    <fullName>Global_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Global Account</label>
    <referenceTo>Global_Account__c</referenceTo>
    <relationshipLabel>Key Global Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>