Perkin-UAT/force-app/main/default/objects/Contact/fields/Goes_on_Restriction__c.field-meta.xml
<CustomField>
    <fullName>Goes_on_Restriction__c</fullName>
    <label>Goes on Restriction</label>
    <type>Date</type>
</CustomField>