Perkin-UAT/force-app/main/default/objects/Contact/fields/Greatest_Challenge__c.field-meta.xml
<CustomField>
    <fullName>Greatest_Challenge__c</fullName>
    <description>ANNUITAS PDG Program</description>
    <label>Greatest Challenge</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
            <value>
                <fullName>Optimizing lab operations</fullName>
            </value>
            <value>
                <fullName>Managing our instrument services</fullName>
            </value>
            <value>
                <fullName>Planning our lab relocation</fullName>
            </value>
            <value>
                <fullName>Understanding diseases and why they occur</fullName>
            </value>
            <value>
                <fullName>Identifying and validating disease-relevant targets and leads</fullName>
            </value>
            <value>
                <fullName>Determining the safety and efficacy of a drug candidate prior to clinical trials</fullName>
            </value>
            <value>
                <fullName>Determining the efficacy and safety of a drug in human subjects</fullName>
            </value>
            <value>
                <fullName>Assuring science and risk-based drug manufacturing meets QbD and compliance regulations</fullName>
            </value>
            <value>
                <fullName>Gaining critical insights from data analytics</fullName>
            </value>
            <value>
                <fullName>Verification and Monitoring of Food Quality Standards</fullName>
            </value>
            <value>
                <fullName>Ensuring food safety and regulatory compliance</fullName>
            </value>
            <value>
                <fullName>Analyzing materials composition and performance</fullName>
            </value>
            <value>
                <fullName>Meeting chemical quality specifications and innovating next generation products</fullName>
            </value>
            <value>
                <fullName>Measuring a wide range of components in petrochemicals</fullName>
            </value>
            <value>
                <fullName>Analytical testing to support the environmental requirements of the mining industry</fullName>
            </value>
            <value>
                <fullName>Ensuring confident results in forensic and security applications</fullName>
            </value>
            <value>
                <fullName>Meeting the regulations and standards of safe drinking and environmental waters</fullName>
            </value>
            <value>
                <fullName>Monitoring indoor and outdoor air to ensure compliance</fullName>
            </value>
            <value>
                <fullName>Detecting soil contaminants and identifying unknown soil pollutants</fullName>
            </value>
            <value>
                <fullName>Identifying the risk of pregnancy-related complications earlier</fullName>
            </value>
            <value>
                <fullName>Accurately detecting disorders in newborns earlier and more efficiently</fullName>
            </value>
            <value>
                <fullName>Eliminating the challenges associated with genomic analysis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>